# harmonogram

./: CMakeLists.txt  imgui.ini
fonts/: RobotoRegular.cpp  RobotoRegular.hpp
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: CMakeLists.txt  imgui_impl_opengl3.h
src/: imgui_boilerplate.hpp  main.cpp  opengl_triangle.cpp
src/assetPackers/: bytePacker.cpp  imagePacker.cpp
src/bettergl/: CMakeLists.txt  Debugging.cpp  Program.cpp
src/bettergl/include/bettergl/: Debugging.hpp  GLTypes.hpp  Program.hpp
